[package]
name = "professional-nouner"
version = "0.1.0"
edition = "2024"
authors = ["Aurorans Solis <primalucegd@gmail.com>"]

[dependencies]
anyhow = "1.0.104"
fuzzy-matcher = "0.3.7"
getrandom = "0.4.3"
poise = "0.6.2"
rand = "0.10.2"
serenity = "0.12.5"
toml = "1.1.3"

[dependencies.chrono]
version = "0.4.45"
features = ["serde"]

[dependencies.clap]
version = "4.6.2"
features = ["derive"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.tokio]
version = "1.53.0"
features = ["full"]
